--- a/src/main/resources/application.yml.example
+++ b/src/main/resources/application.yml.example
@@ -1,9 +1,19 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${url:localhost:3306/paste}
-    username: ${username:root}
-    password: ${password:root}
+    url: jdbc:mysql://localhost:3306/paste
+    username: root
+    password: 123456
+  servlet:
+    multipart:
+      max-file-size: 1024MB
+      max-request-size: 1024MB
+
+paste:
+  code-length: 6
+  expire-minutes: 15
+  max-retries: 10
+  upload-path: /root/paste/files
 
 logging:
   file:
