更新样例配置

--- a/src/main/resources/application.yml.example
+++ b/src/main/resources/application.yml.example
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/paste
-    username: root
-    password: 123456
+    url: jdbc:mysql://<ip:port>/paste
+    username: <username>
+    password: <password>
   servlet:
     multipart:
       max-file-size: 1024MB
